# AndroidSpeechRecognition

./: .gitignore  README.md  gradle.properties  settings.gradle
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/androidspeechrecognition/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidspeechrecognition/: MainActivity.kt  SpeechRecognizer.kt
app/src/main/jni/: speech_recognizer.cpp
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidspeechrecognition/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
model/: vocab.json  wav2vec2-quant.basic.ort  wav2vec2-quant.basic.required_operators.config
scripts/: convert_to_onnx.py  quantize.py
